--- a/css/style.css
+++ b/css/style.css
@@ -238,5 +238,33 @@ footer p a {
     nav li a {
         padding: 0.5em 1em;
     }
+    
+    /* Desktop viewport: Style rules for main content */
+    main {
+        clear: left;
+    }
+    
+    main h1 {
+        font-size: 1.8em;
+    }
+    
+    #weights, #cardio, #training {
+        width: 29%;
+        float: left;
+        margin: 0 2%;
+    }
+    
+    #excercises {
+        clear: left;
+    }
+}
+
+/* Media Query for Large Desktop Viewports */
+@media screen and (min-width: 1921px) {
+    
+    #container {
+        width: 1920px;
+        margin: 0 auto;
+    }
 }
 
