--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ footer p a {
 }
 
 /* Media Query for Tablet Viewport */
-@media screen and (min-width: 630px) {
+@media screen and (min-width: 630px), print {
     
     /* Tablet Viewport: Show tablet-desktop class, hide mobile class */
     .tablet-desktop {
@@ -211,7 +211,7 @@ footer p a {
 } 
 
 /* Media Query for Desktop Viewport */
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 1015px), print {
     
     /* Desktop Viewport: style rules for header */
     header {
@@ -237,6 +237,11 @@ footer p a {
     
     nav li a {
         padding: 0.5em 1em;
+    }
+    
+    nav li a:hover {
+        color: #000;
+        background-color: #fff;
     }
     
     /* Desktop viewport: Style rules for main content */
@@ -265,6 +270,16 @@ footer p a {
     #container {
         width: 1920px;
         margin: 0 auto;
+    }
+}
+
+/* media Query for print */
+
+@media print {
+    
+    body {
+        background-color: #fff;
+        color: #000;
     }
 }
 
