--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,7 @@ footer p a {
     #exercises {
         border-top: 1px solid #000;
         border-bottom: 1px solid #000;
+        background: linear-gradient(to right, #ccc, #fff);
         background-color: #f2f2f2;
         padding: 1% 2%;
     }
